<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-24dp"

    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textViewRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:layout_margin="15dp"
            android:layout_marginEnd="5dp"/>

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:layout_margin="15dp"

            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/editTextDisplayName"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/display_name"
        android:inputType="textPersonName"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"

        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"

        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextRePassword"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"

        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewPasswordInstruction"
        android:layout_width="365dp"
        android:layout_height="102dp"
        android:text="@string/a_valid_password_has_at_least_8_characters_and_includes_at_lease_one_uppercase_letter_one_lowercase_letter_one_number_and_one_special_character"
        android:textSize="15sp"

        android:layout_gravity="center"
        android:layout_marginTop="18dp"/>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/button_color"/>

    <Button
        android:id="@+id/signInButton"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:background="@color/button_color"
        android:text="@string/already_have_an_account_click_here_to_sign_in"/>

</LinearLayout>