<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="25dp"
    android:orientation="vertical"
    android:id="@+id/rootLayout"
    android:background="@color/chat_gray">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/profile_picture"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_title"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_baseline_account_circle_24"
        android:contentDescription="@string/profile_picture" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_picture"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/profile_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/terminal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminal"
        android:textSize="15sp"
        android:layout_below="@+id/title"
        android:layout_toEndOf="@+id/profile_picture"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eventDescription"
        android:text="This is the room description"
        android:textSize="15sp"
        android:layout_toEndOf="@+id/profile_picture"
        android:layout_below="@id/terminal" />

    <TextView
        android:id="@+id/participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participants"
        android:textSize="15sp"
        android:layout_below="@+id/roomTime"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/roomTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_time"
        android:textSize="15sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"/>


</RelativeLayout>