<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-24dp"

    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        />

    <EditText
        android:id="@+id/inputFlightNum"
        android:layout_width="203dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/flightNum"
        android:layout_gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        />


    <Button
        android:id="@+id/btnLoginSignUp"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/sign_in_sign_up"
        android:backgroundTint="@color/button_color"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnEnterFlightNum"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/start"
        android:backgroundTint="@color/button_color"
        android:textSize="25sp" />

</LinearLayout>