<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-24dp"

    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textViewRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_title"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColorHint="#757575"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"

        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/log_in"
        android:backgroundTint="@color/button_color"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up"
        android:backgroundTint="@color/button_color"
        android:textSize="25sp" />

</LinearLayout>