<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEventSummaryActivity"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:layout_marginLeft="50dp"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Some title"
        />

    <TextView
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventTime"
        />

    <TextView
        android:layout_marginLeft="50dp"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        />

    <TextView
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventDesc"
        />

    <TextView
        android:layout_marginLeft="50dp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        />

    <TextView
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/capacityDescriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Room capacity"
        />

    <TextView
        android:layout_marginLeft="50dp"
        android:id="@+id/capacityTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        tools:layout_editor_absoluteY="409dp" />

    <TextView
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/latDescriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Latitude"
        />

    <TextView
        android:layout_marginLeft="50dp"
        android:id="@+id/latTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        tools:layout_editor_absoluteY="409dp" />

    <TextView
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/longDescriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Latitude"
        />

    <TextView
        android:layout_marginLeft="50dp"
        android:id="@+id/longTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        tools:layout_editor_absoluteY="409dp" />

    <TextView
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventTags"
        />

    <TextView
        android:layout_marginLeft="50dp"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        />

    <Button
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:onClick="createEventPart5"
        android:text="@string/nextBtn"
        />

</androidx.appcompat.widget.LinearLayoutCompat>